--- a/src/ApiGateways/OcelotApiGw/appsettings.json
+++ b/src/ApiGateways/OcelotApiGw/appsettings.json
@@ -13,6 +13,20 @@
   "JwtSettings": {
     "Key": "AVERYVERYVERYVERYVERYTOPSECRET123456789^%$"
   },
+  "ApiConfiguration": {
+    "ApiTitle": "Product API",
+    "ApiName": "tedu_microservices_api",
+    "ApiVersion": "v1",
+    "IdentityServerBaseUrl": "http://localhost:5000",
+    "IssuerUri": "http://localhost:5001",
+    "ApiBaseUrl": "http://localhost:5002",
+    "ClientId": "tedu_microservices_swagger"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200",
+    "UserName": "elastic",
+    "Password": "admin"
+  },
   "AllowOrigins": "*",
   "AllowedHosts": "*"
 }
